--- a/index.html
+++ b/index.html
@@ -5,88 +5,77 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
-    <title>Document</title>
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            const navbar = document.getElementById("navbar");
-            const navLinks = document.querySelectorAll(".nav-link"); // Select all nav links
-
-            window.addEventListener("scroll", function () {
-                if (window.scrollY > 50) {
-                    navbar.classList.remove("bg-transparent");
-                    navbar.classList.add("bg-blue-400", "shadow-md");
-
-                    // Change text color to white
-                    navLinks.forEach(link => {
-                        link.classList.remove("text-black");
-                        link.classList.add("text-white");
-                    });
-                } else {
-                    navbar.classList.add("bg-transparent");
-                    navbar.classList.remove("bg-blue-400", "shadow-md");
-
-                    // Change text color to black
-                    navLinks.forEach(link => {
-                        link.classList.remove("text-white");
-                        link.classList.add("text-black");
-                    });
-                }
-            });
-        });
-    </script>
+    <title>Montecillo Roro</title>
+    <script src="./script.js"></script>
 </head>
 
-<body id="page" class="h-1000 scroll-smooth">
-    <nav id="navbar"
-        class="fixed top-0 left-0 w-full h-20 py-2 px-10 flex items-center z-50 text-lg transition-all duration-300 bg-transparent text-black"
-        style="user-select: none;">
-        <a id="nav_text" href="#" class="ml-30 mr-10"><img src="./assets/roro_transparent.png"
-                style="width: 60px;" /></a>
-        <a id="nav_text" href="#" class="mr-10 nav-link text-white">Home</a>
-        <a id="nav_text" href="#" class="mr-10 nav-link text-white">Routes & Schedules</a>
-        <a id="nav_text" href="#" class="mr-10 nav-link text-white">Rates</a>
+<body class="h-full scroll-smooth">
+    <!-- Navbar -->
+    <nav id="navbar" class="fixed w-full h-20 py-4 px-4 sm:px-10 flex items-center justify-between z-50 transition-all duration-300 bg-transparent">
+        <a href="index.html" class="text-lg font-bold flex items-center">
+            <img src="./assets/roro_transparent.png" class="w-12 h-12" alt="Logo" />
+        </a>
 
-        <!--OLD BUTTON <button type="button"
-            class="mt-3 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Login
-            / Register</button> -->
+        <!-- Desktop Menu -->
+        <div class="hidden md:flex space-x-6 text-lg">
+            <a href="index.html" class="nav-link text-black hover:text-orange-500 transition text-stone-100">Home</a>
+            <a href="/pages/booking.html" class="nav-link text-black hover:text-orange-500 transition text-stone-100">Routes & Schedules</a>
+            <a href="#" class="nav-link text-black hover:text-orange-500 transition text-stone-100">Rates</a>
+        </div>
+
+        <!-- Mobile Menu a -->
+        <button id="menu-button" class="md:hidden text-black focus:outline-none">
+            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
+            </svg>
+        </button>
+
+        <!-- Mobile Menu -->
+        <div id="mobile-menu" class="hidden absolute top-20 left-0 w-full bg-blue-400 text-white text-center py-4 md:hidden">
+            <a href="index.html" class="block py-2 text-stone-100">Home</a>
+            <a href="/pages/booking.html" class="block py-2 text-stone-100">Routes & Schedules</a>
+            <a href="#" class="block py-2 text-stone-100">Rates</a>
+        </div>
     </nav>
 
-    <div class="relative w-full h-screen" style="user-select: none;">
-        <!-- Video Background -->
-        <video autoplay muted loop id="front_vid" class="w-full h-full object-cover">
-            <source src="./assets/front_vid.mp4" type="video/mp4" />
+    <div class="relative w-full h-screen">
+        <div class="bg-black opacity-30 absolute inset-0"></div>
+        <video autoplay muted loop class="w-full h-full object-cover">
+            <source src="./assets/front_vid_no_logo.mp4" type="video/mp4" />
         </video>
-    
-        <!-- Overlay Text -->
         <div class="absolute inset-0 flex flex-col items-center justify-center text-white text-center">
-            <p class="text-7xl font-bold drop-shadow-lg">Explore the Philippines</p>
+            <p class="text-3xl sm:text-7xl font-bold drop-shadow-lg">Explore the Philippines</p>
             <a class="text-lg mt-2 drop-shadow-lg">Speed, Quality, and Reliability</a>
-            <button type="button"
-            class="mt-3 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Book now</button>
+            <a href="/pages/booking.html" class="mt-4 bg-blue-700 hover:bg-blue-800 px-5 py-2 text-sm sm:text-base rounded-lg transition">Book Now</a>
         </div>
     </div>
-    
-    <div id="vision-mission" class="w-full h-100 bg-white px-50">
-        <p class="text-black text-[25px] pt-20 text-center">Vision and Mission </p>
-        <p class="text-neutral-500 text-[20px] pt-10">To be the leading provider of safe, reliable and most of all
-            comfortable transportation for everyone. <br> And setting the standard for excellence in traveling whatever
-            island you like in the Philippines.</p>
 
-        <p class="text-neutral-500 text-[20px] pt-10">Our mission is to ensure the safety and peace of mind of our every
-            passenger by Montecillo Roro transportation services. <br> We will provide and maintain a high safety
-            standards for everybody who will be riding with us.</p>
-    </div>
+    <section class="w-full py-20 px-6 sm:px-20 bg-white text-center">
+        <h2 class="text-2xl sm:text-3xl font-bold text-black">Vision and Mission</h2>
+        <p class="text-neutral-500 text-lg sm:text-xl mt-6">
+            To be the leading provider of safe, reliable, and comfortable transportation for everyone.
+            Setting the standard for excellence in travel across the Philippines.
+        </p>
+        <p class="text-neutral-500 text-lg sm:text-xl mt-4">
+            Our mission is to ensure the safety and peace of mind of our passengers with Montecillo Roro services.
+            We maintain high safety standards for everyone on board.
+        </p>
+    </section>
 
-    <div id="about" class="w-full h-150 bg-orange-400 px-50">
-        <p class="text-white text-[25px] pt-10 text-center">About us</p>
-        <p class="text-stone-300 text-[20px] pt-10 text-center">Captain Mangji Hasa Montecillio founded Montecillio Roro
-            in 1985. <br> Captain Montecillio was a talented Filipino mariner who dreamed of enhancing inter-island
-            transport within the Philippines.</p>
+    <section class="w-full py-20 px-6 sm:px-20 bg-orange-500 text-center">
+        <h2 class="text-2xl sm:text-3xl font-bold text-white">About Us</h2>
+        <p class="text-stone-100 text-lg sm:text-xl mt-6">
+            Captain Mangji Hasa Montecillio founded Montecillo Roro
+            in 1985. <br> Captain Montecillo was a talented Filipino mariner who dreamed of enhancing inter-island
+            transport within the Philippines.
+        </p>
+        <!-- <button class="mt-6 bg-blue-700 hover:bg-blue-800 px-5 py-2 text-sm text-stone-100 sm:text-base rounded-lg transition">Learn More</a> -->
+           <a href="/pages/booking.html"><button  class="mt-4 bg-blue-700 hover:bg-blue-800 px-5 py-2 text-sm text-stone-100 sm:text-base rounded-lg transition">More About Us</button></a> 
+    </section>
 
-        <button type="button"
-            class="mt-20 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Learn
-            more</button>
-    </div>
+    <footer class="w-full bg-gray-900 py-10 text-center text-white">
+        &copy; 2025 Montecillo Roro. All Rights Reserved.
+    </footer>
 </body>
 
 </html>
