Update html icon and title

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
-    <title>Montecillo Roro</title>
+    <title>Montecillo Roro | Home</title>
+    <link rel="icon" type="image/png" href="./assets/roro_transparent.png">
     <script src="./script.js"></script>
 </head>
 
