--- a/pages/booking.html
+++ b/pages/booking.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <title>Montecillo Roro | Booking</title>
-    <link rel="icon" type="image/png" href="./assets/roro_transparent.png">
+    <link rel="icon" type="image/png" href="../assets/roro_transparent.png">
     <script src="./script.js"></script>
 </head>
 
