--- a/pages/about.html
+++ b/pages/about.html
@@ -34,7 +34,7 @@
         <!-- Mobile Menu -->
         <div id="mobile-menu" class="hidden absolute top-20 left-0 w-full bg-blue-400 text-white text-center py-4 md:hidden">
             <a href="../index.html" class="block py-2 text-stone-100">Home</a>
-            <a href="#" class="block py-2 text-stone-100">Routes & Schedules</a>
+            <a href="../pages/booking.html" class="block py-2 text-stone-100">Routes & Schedules</a>
             <a href="#" class="block py-2 text-stone-100">Rates</a>
         </div>
     </nav>
