--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <section class="w-full py-20 px-6 sm:px-20 bg-orange-500 text-center">
         <h2 class="text-2xl sm:text-3xl font-bold text-white">About Us</h2>
         <p class="text-stone-100 text-lg sm:text-xl mt-6">
-            Captain Mangji Hasa Montecillio founded Montecillo Roro
+            Capt. Mangji Hasa Montecillo founded Montecillo Roro
             in 1985. <br> Captain Montecillo was a talented Filipino mariner who dreamed of enhancing inter-island
             transport within the Philippines.
         </p>
