About page updated

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             transport within the Philippines.
         </p>
         <!-- <button class="mt-6 bg-blue-700 hover:bg-blue-800 px-5 py-2 text-sm text-stone-100 sm:text-base rounded-lg transition">Learn More</a> -->
-           <a href="/pages/booking.html"><button  class="mt-4 bg-blue-700 hover:bg-blue-800 px-5 py-2 text-sm text-stone-100 sm:text-base rounded-lg transition">More About Us</button></a> 
+           <a href="/pages/about.html"><button  class="mt-4 bg-blue-700 hover:bg-blue-800 px-5 py-2 text-sm text-stone-100 sm:text-base rounded-lg transition">More About Us</button></a> 
     </section>
 
     <footer class="w-full bg-gray-900 py-10 text-center text-white">
