--- a/pages/booking.html
+++ b/pages/booking.html
@@ -20,7 +20,7 @@
         <!-- Desktop Menu -->
         <div class="hidden md:flex space-x-6 text-lg">
             <a href="../index.html" class="nav-link text-black hover:text-stone-500 transition text-stone-100">Home</a>
-            <a href="#" class="nav-link text-black hover:text-stone-500 transition text-stone-100">Routes & Schedules</a>
+            <a href="../pages/booking.html" class="nav-link text-black hover:text-stone-500 transition text-stone-100">Routes & Schedules</a>
             <a href="#" class="nav-link text-black hover:text-stone-500 transition text-stone-100">Rates</a>
         </div>
 
@@ -34,7 +34,7 @@
         <!-- Mobile Menu -->
         <div id="mobile-menu" class="hidden absolute top-20 left-0 w-full bg-blue-400 text-white text-center py-4 md:hidden">
             <a href="../index.html" class="block py-2 text-stone-100">Home</a>
-            <a href="#" class="block py-2 text-stone-100">Routes & Schedules</a>
+            <a href="../pages/booking.html" class="block py-2 text-stone-100">Routes & Schedules</a>
             <a href="#" class="block py-2 text-stone-100">Rates</a>
         </div>
     </nav>
