--- a/pages/booking.html
+++ b/pages/booking.html
@@ -40,26 +40,33 @@
     </nav>
 
     <div class="relative w-full h-100">
-        <div class="bg-orange-500 absolute inset-0"></div>
+        <div class="bg-blue-700 absolute inset-0"></div>
         <div class="absolute inset-0 flex flex-col items-center justify-center text-white text-center">
             <p class="text-3xl sm:text-7xl font-bold drop-shadow-lg">Routes & Schedules</p>
-            <a href="/pages/booking.html" class="mt-4 bg-blue-700 hover:bg-blue-800 px-5 py-2 text-sm sm:text-base rounded-lg transition">Book Now</a>
+            <!-- <a href="/pages/booking.html" class="mt-4 bg-blue-700 hover:bg-blue-800 px-5 py-2 text-sm sm:text-base rounded-lg transition">Book Now</a> -->
         </div>
     </div>
 
     <!-- MAIN CONTENTS HERE PLS -->
 
-    <section class="w-full py-20 px-6 sm:px-20 bg-white text-center">
-        <h2 class="text-2xl sm:text-3xl font-bold text-black">Vision and Mission</h2>
-        <p class="text-neutral-500 text-lg sm:text-xl mt-6">
-            To be the leading provider of safe, reliable, and comfortable transportation for everyone.
-            Setting the standard for excellence in travel across the Philippines.
-        </p>
-        <p class="text-neutral-500 text-lg sm:text-xl mt-4">
-            Our mission is to ensure the safety and peace of mind of our passengers with Montecillo Roro services.
-            We maintain high safety standards for everyone on board.
-        </p>
+    <section class="flex flex-row justify-center w-full py-20 px-6 sm:px-20 bg-white text-center gap-50">
+        <div>
+            <h2 class="text-2xl sm:text-3xl font-bold text-black">BATANGAS - CALAPAN</h2>
+            <p class="float-left text-left">TRAVEL TIME: 2 Hours <br> Address:  Barangay Santa Clara, Batangas City <br> Mobile Nos.: 0961-827-6932</p>
+        </div>
+        
+        <img src="../assets/BAT-CAL.png" class="rounded-lg drop-shadow-lg" />
     </section>
+
+    <section class="flex flex-row justify-center w-full py-20 px-6 sm:px-20 bg-white text-center gap-50">
+        <div>
+            <h2 class="text-2xl sm:text-3xl font-bold text-black">BULALACAO - CATICLAN</h2>
+            <p class="float-left text-left">TRAVEL TIME: 3 Hours and 30 Minutes <br> Address:  Kabangkalan, Poblacion Bulalacao, Oriental Mindoro <br> Mobile Nos.: 0929-845-4071</p>
+        </div>
+        
+        <img src="../assets/BUL-CAT.png" class="rounded-lg drop-shadow-lg" />
+    </section>
+
 
 
 
