--- a/pages/user.html
+++ b/pages/user.html
@@ -7,9 +7,8 @@
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <title>Montecillo Roro | Booking</title>
     <link rel="icon" type="image/png" href="../assets/roro_transparent.png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
-    <script src="../script.js"></script>
+    <script src="../script.js" type="module"></script>
+    <script src="../getUser.js" type="module"></script>
 </head>
 
 <body class="h-full scroll-smooth">
@@ -48,32 +47,26 @@
     <div class="relative w-full h-20">
         <div class="bg-blue-700 absolute inset-0"></div>
         <div class="absolute inset-0 flex flex-col items-center justify-center text-white text-center">
+            <p class="text-3xl sm:text-2xl font-bold drop-shadow-lg">User Dashboard</p>
             <!-- <a href="/pages/booking.html" class="mt-4 bg-blue-700 hover:bg-blue-800 px-5 py-2 text-sm sm:text-base rounded-lg transition">Book Now</a> -->
         </div>
     </div>
 
     <!-- MAIN CONTENTS HERE PLS -->
 
-    <div class="h-fit">
-        <div class="rounded bg-stone-200 p-10 m-10 w-150 m-auto my-40">
-            <h1 class="mb-10">Login / Register</h1>
-            <div class="flex flex-col bg-blue z-1 gap-10">
-                <input class="rounded bg-stone-300 py-2 pl-5" id="EmailField" type="text" placeholder="Email" />
-                <div class="relative w-full">
-                    <input class="w-full rounded bg-stone-300 py-2 pl-5 pr-10" id="PasswordField" type="password" placeholder="Password">
-                    <button type="button" id="togglePassVisibility" class="absolute inset-y-0 right-3 flex items-center text-sm text-gray-500 fa fa-eye cursor-pointer" onclick="togglePassVisibility()"/>
-                </div>
-
-                <div id="button_holder" class="flex justify-evenly flex-col">
-                    <button class="py-2 px-4 bg-blue-400 rounded m-auto" type="button" onclick="submitLogin()">Login</button>
-                    <button class="text-stone-600 mt-7">Dont have an account? Register now</button>
-                </div>
-            </div>
-            
+    <section class="flex flex-col gap-10 w-full max-w-4xl p-5 bg-white shadow-lg rounded-lg">
+        <div class="p-5 bg-stone-300 rounded-lg shadow">
+            <p class="text-3xl sm:text-2xl font-bold drop-shadow-lg">User Information</p>
+            <p class="text-gray-700 mt-2">Name: <span id="userName"></span></p>
+            <p class="text-gray-700">Email: <span id="userEmail"></span></p>
         </div>
-    </div>
-    
-   
+
+        <div class="p-5 bg-stone-300 rounded-lg shadow">
+            <p class="text-3xl sm:text-2xl font-bold drop-shadow-lg">Tickets</p>
+            <ul id="ticketList" class="mt-3 space-y-2"></ul>
+        </div>
+    </section>
+
     <footer class="w-full bg-gray-900 py-10 text-center text-white">
         &copy; 2025 Montecillo Roro. All Rights Reserved.
     </footer>
