--- a/pages/user.html
+++ b/pages/user.html
@@ -54,7 +54,7 @@
 
     <!-- MAIN CONTENTS HERE PLS -->
 
-    <section class="flex flex-col gap-10 w-full max-w-4xl p-5 bg-white shadow-lg rounded-lg">
+    <section class="flex flex-col gap-10 w-screen p-5 bg-white py-30 pt-10 shadow-lg rounded-lg">
         <div class="p-5 bg-stone-300 rounded-lg shadow">
             <p class="text-3xl sm:text-2xl font-bold drop-shadow-lg">User Information</p>
             <p class="text-gray-700 mt-2">Name: <span id="userName"></span></p>
