--- a/pages/booking.html
+++ b/pages/booking.html
@@ -7,7 +7,7 @@
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <title>Montecillo Roro | Booking</title>
     <link rel="icon" type="image/png" href="../assets/roro_transparent.png">
-    <script src="../script.js"></script>
+    <script src="../script.js" type="module"></script>
 </head>
 
 <body class="h-full scroll-smooth">
@@ -60,12 +60,11 @@
             <p class="text-left">
                 TRAVEL TIME: 2 Hours <br>
                 Address: Barangay Santa Clara, Batangas City <br>
-                Mobile Nos.: 0961-827-6932
+                Mobile Nos.: 09XXXXXXXXX
             </p>
             <div>
                 <a href="../pages/ticketing.html"
-                    class="bg-blue-700 hover:bg-blue-800 px-5 py-2 text-sm text-stone-100 sm:text-base rounded-lg transition inline-block">Learn
-                    More</a>
+                    class="mt-5 bg-blue-700 hover:bg-blue-800 px-5 py-2 text-sm text-stone-100 sm:text-base rounded-lg transition inline-block">Book Now</a>
             </div>
         </div>
         <img src="../assets/BAT-CAL.png" class="rounded-lg drop-shadow-lg" />
@@ -78,12 +77,11 @@
             <p class="text-white">
                 TRAVEL TIME: 3 Hours and 30 Minutes <br>
                 Address: Kabangkalan, Poblacion Bulalacao, Oriental Mindoro <br>
-                Mobile Nos.: 0929-845-4071
+                Mobile Nos.: 09XXXXXXXXX
             </p>
             <div>
                 <a href="#"
-                    class="bg-blue-700 hover:bg-blue-800 px-5 py-2 text-sm text-stone-100 sm:text-base rounded-lg transition inline-block">Learn
-                    More</a>
+                    class="mt-5 bg-blue-700 hover:bg-blue-800 px-5 py-2 text-sm text-stone-100 sm:text-base rounded-lg transition inline-block">Book Now</a>
             </div>
         </div>
         <img src="../assets/BUL-CAT.png" class="rounded-lg drop-shadow-lg" />
@@ -95,12 +93,11 @@
             <p>
                 TRAVEL TIME: 1 Hour <br>
                 Address: Port of Dumangas, Sitio Nalu-oyan At Barangay Sapao, Dumangas, Iloilo <br>
-                Mobile Nos.: 0969-101-0597 / 0906-226-1149
+                Mobile Nos.: 09XXXXXXXXX
             </p>
             <div>
                 <a href="#"
-                    class="bg-blue-700 hover:bg-blue-800 px-5 py-2 text-sm text-stone-100 sm:text-base rounded-lg transition inline-block">Learn
-                    More</a>
+                    class="mt-5 bg-blue-700 hover:bg-blue-800 px-5 py-2 text-sm text-stone-100 sm:text-base rounded-lg transition inline-block">Book Now</a>
             </div>
         </div>
         <img src="../assets/DUM-BAN.png" class="rounded-lg drop-shadow-lg" />
