--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <title>Montecillo Roro | Home</title>
     <link rel="icon" type="image/png" href="./assets/roro_transparent.png">
-    <script src="./script.js"></script>
+    <script src="./script.js" type="module"></script>
 </head>
 
 <body class="h-full scroll-smooth">
