--- a/pages/booking.html
+++ b/pages/booking.html
@@ -80,7 +80,7 @@
                 Mobile Nos.: 09XXXXXXXXX
             </p>
             <div>
-                <a href="#"
+                <a href="../pages/ticketing.html"
                     class="mt-5 bg-blue-700 hover:bg-blue-800 px-5 py-2 text-sm text-stone-100 sm:text-base rounded-lg transition inline-block">Book Now</a>
             </div>
         </div>
@@ -96,7 +96,7 @@
                 Mobile Nos.: 09XXXXXXXXX
             </p>
             <div>
-                <a href="#"
+                <a href="../pages/ticketing.html"
                     class="mt-5 bg-blue-700 hover:bg-blue-800 px-5 py-2 text-sm text-stone-100 sm:text-base rounded-lg transition inline-block">Book Now</a>
             </div>
         </div>
