As of 11:20PM 3/10/2025 pagod nako man pr pa

--- a/index.html
+++ b/index.html
@@ -47,25 +47,34 @@
         <div class="absolute inset-0 flex flex-col items-center justify-center text-white text-center">
             <p class="text-3xl sm:text-7xl font-bold drop-shadow-lg">Explore the Philippines</p>
             <a class="text-lg mt-2 drop-shadow-lg">Speed, Quality, and Reliability</a>
-            <a href="/pages/booking.html" class="mt-4 bg-blue-700 hover:bg-blue-800 px-5 py-2 text-sm sm:text-base rounded-lg transition">Book Now</a>
+            <a href="/pages/login.html" class="mt-4 bg-blue-700 hover:bg-blue-800 px-5 py-2 text-sm sm:text-base rounded-lg transition">Login and Book Now</a>
         </div>
     </div>
 
     <section class="w-full py-20 px-6 sm:px-20 bg-white text-center">
+        <h2 class="text-2xl sm:text-3xl font-bold text-black">Our Offered Routes!</h2>
+        <p class="text-black text-lg sm:text-xl mt-6">
+            Ready to take on a new adventure? Browse our offered routes!
+        </p>
+        <!-- <button class="mt-6 bg-blue-700 hover:bg-blue-800 px-5 py-2 text-sm text-stone-100 sm:text-base rounded-lg transition">Learn More</a> -->
+           <a href="/pages/booking.html"><button  class="mt-4 bg-blue-700 hover:bg-blue-800 px-5 py-2 text-sm text-stone-100 sm:text-base rounded-lg transition">Browse Routes</button></a> 
+    </section>
+
+    <section class="w-full py-20 px-6 sm:px-20 bg-orange-500 text-center">
         <h2 class="text-2xl sm:text-3xl font-bold text-black">Vision and Mission</h2>
-        <p class="text-neutral-500 text-lg sm:text-xl mt-6">
+        <p class="text-black text-lg sm:text-xl mt-6">
             To be the leading provider of safe, reliable, and comfortable transportation for everyone.
             Setting the standard for excellence in travel across the Philippines.
         </p>
-        <p class="text-neutral-500 text-lg sm:text-xl mt-4">
+        <p class="text-black text-lg sm:text-xl mt-4">
             Our mission is to ensure the safety and peace of mind of our passengers with Montecillo Roro services.
             We maintain high safety standards for everyone on board.
         </p>
     </section>
 
-    <section class="w-full py-20 px-6 sm:px-20 bg-orange-500 text-center">
-        <h2 class="text-2xl sm:text-3xl font-bold text-white">About Us</h2>
-        <p class="text-stone-100 text-lg sm:text-xl mt-6">
+    <section class="w-full py-20 px-6 sm:px-20 bg-white text-center">
+        <h2 class="text-2xl sm:text-3xl font-bold text-black">About Us</h2>
+        <p class="text-black text-lg sm:text-xl mt-6">
             Capt. Mangji Hasa Montecillo founded Montecillo Roro
             in 1985. <br> Captain Montecillo was a talented Filipino mariner who dreamed of enhancing inter-island
             transport within the Philippines.
