--- a/pages/rates.html
+++ b/pages/rates.html
@@ -46,7 +46,7 @@
     <div class="relative w-full h-50 sm:h-100">
         <div class="bg-blue-700 absolute inset-0"></div>
         <div class="absolute inset-0 flex flex-col items-center justify-center text-white text-center">
-            <p class="text-3xl sm:text-7xl font-bold drop-shadow-lg">Routes & Schedules</p>
+            <p class="text-3xl sm:text-7xl font-bold drop-shadow-lg">Route Rates</p>
             <!-- <a href="/pages/booking.html" class="mt-4 bg-blue-700 hover:bg-blue-800 px-5 py-2 text-sm sm:text-base rounded-lg transition">Book Now</a> -->
         </div>
     </div>
@@ -67,7 +67,7 @@
                     class="mt-5 bg-blue-700 hover:bg-blue-800 px-5 py-2 text-sm text-stone-100 sm:text-base rounded-lg transition inline-block">Book Now</a>
             </div>
         </div>
-        <img src="../assets/BAT-CAL.png" class="rounded-lg drop-shadow-lg" />
+        <img src="../assets/BAT-CAL_RATE.png" class="rounded-lg drop-shadow-lg" />
     </section>
 
     <section
@@ -84,7 +84,7 @@
                     class="mt-5 bg-blue-700 hover:bg-blue-800 px-5 py-2 text-sm text-stone-100 sm:text-base rounded-lg transition inline-block">Book Now</a>
             </div>
         </div>
-        <img src="../assets/BUL-CAT.png" class="rounded-lg drop-shadow-lg" />
+        <img src="../assets/BULA_CAT_RATE.png" class="rounded-lg drop-shadow-lg" />
     </section>
 
     <section class="flex flex-col sm:flex-row justify-center w-full py-20 px-6 sm:px-20 bg-white text-center gap-10">
@@ -100,7 +100,7 @@
                     class="mt-5 bg-blue-700 hover:bg-blue-800 px-5 py-2 text-sm text-stone-100 sm:text-base rounded-lg transition inline-block">Book Now</a>
             </div>
         </div>
-        <img src="../assets/DUM-BAN.png" class="rounded-lg drop-shadow-lg" />
+        <img src="../assets/DUM-BAN_RATE.png" class="rounded-lg drop-shadow-lg" />
     </section>
 
 
