--- a/pages/booking.html
+++ b/pages/booking.html
@@ -62,7 +62,7 @@
         <!-- MAIN CONTENTS HERE PLS -->
 
         <section
-            class="flex flex-col-reverse justify-center w-full py-20 px-12 gap-10 mx-100 sm:mx-10 sm:flex-row sm:px-6 bg-white text-center">
+            class="flex flex-col-reverse justify-center w-full py-20 px-12 gap-10 sm:mx-10 sm:flex-row sm:px-6 bg-white text-center">
             <div class="flex flex-col text-left w-max justify-center">
                 <h2 class="text-2xl sm:text-3xl font-bold text-black">BATANGAS - CALAPAN</h2>
                 <p class="text-left">
