--- a/pages/rates.html
+++ b/pages/rates.html
@@ -26,11 +26,11 @@
             <!-- Desktop Menu -->
             <div class="hidden md:flex space-x-6 text-lg">
                 <a href="../index.html"
-                    class="nav-link text-black hover:text-orange-500 transition text-stone-100">Home</a>
+                    class="nav-link text-black hover:text-neutral-300 transition text-stone-100">Home</a>
                 <a href="/pages/booking.html"
-                    class="nav-link text-black hover:text-orange-500 transition text-stone-100">Routes & Schedules</a>
+                    class="nav-link text-black hover:text-neutral-300 transition text-stone-100">Routes & Schedules</a>
                 <a href="/pages/rates.html"
-                    class="nav-link text-black hover:text-orange-500 transition text-stone-100">Rates</a>
+                    class="nav-link text-black hover:text-neutral-300 transition text-stone-100">Rates</a>
             </div>
 
             <!-- Mobile Menu a -->
