--- a/pages/user.html
+++ b/pages/user.html
@@ -17,9 +17,6 @@
     </div>
 
     <div>
-
-
-
         <!-- Navbar -->
         <nav id="navbar"
             class="fixed w-full h-20 py-4 px-4 sm:px-10 flex items-center justify-between z-50 transition-all duration-300 bg-transparent">
@@ -30,11 +27,11 @@
             <!-- Desktop Menu -->
             <div class="hidden md:flex space-x-6 text-lg">
                 <a href="../index.html"
-                    class="nav-link text-black hover:text-orange-500 transition text-stone-100">Home</a>
+                    class="nav-link text-black hover:text-neutral-300 transition text-stone-100">Home</a>
                 <a href="/pages/booking.html"
-                    class="nav-link text-black hover:text-orange-500 transition text-stone-100">Routes & Schedules</a>
+                    class="nav-link text-black hover:text-neutral-300 transition text-stone-100">Routes & Schedules</a>
                 <a href="/pages/rates.html"
-                    class="nav-link text-black hover:text-orange-500 transition text-stone-100">Rates</a>
+                    class="nav-link text-black hover:text-neutral-300 transition text-stone-100">Rates</a>
             </div>
 
             <!-- Mobile Menu a -->
