--- a/pages/about.html
+++ b/pages/about.html
@@ -24,7 +24,7 @@
         <!-- Navbar -->
         <nav id="navbar"
             class="fixed w-full h-20 py-4 px-4 sm:px-10 flex items-center justify-between z-50 transition-all duration-300 bg-transparent">
-            <a href="index.html" class="text-lg font-bold flex items-center">
+            <a href="../index.html" class="text-lg font-bold flex items-center">
                 <img src="../assets/roro_transparent.png" class="w-12 h-12" alt="Logo" />
             </a>
 
